[package]
name = "rustcare-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Offline-first synchronization engine with CRDTs for RustCare Engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "uuid",
    "chrono",
    "json"
] }

# Internal dependencies
error-common = { path = "../error-common" }
crypto = { path = "../crypto" }
events-bus = { path = "../events-bus" }

# Sync-specific dependencies
serde_cbor = "0.11"  # Compact binary serialization for sync
bincode = "1.3"       # Binary encoding
sha2 = "0.10"         # Hashing for vector clocks
base64 = "0.21"       # Encoding

# P2P networking (optional)
mdns-sd = { version = "0.11", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }

[features]
default = []
p2p = ["mdns-sd", "tokio-tungstenite"]

[dev-dependencies]
tempfile = "3.8"
