[package]
name = "voice-recognition-service"
version = "0.1.0"
edition = "2021"
authors = ["RustCare Team"]
license = "AGPL-3.0-only"
repository = "https://github.com/rustcare/rustcare-engine"
homepage = "https://rustcare.dev"
documentation = "https://docs.rustcare.dev"
keywords = ["healthcare", "voice", "dictation", "nuance", "dragon", "speech-recognition", "emr"]
categories = ["healthcare", "multimedia"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }

# Internal dependencies
error-common = { path = "../error-common" }
logger-redacted = { path = "../logger-redacted" }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Audio processing
hound = "3.5"  # WAV file reading
rubato = "0.14"  # Audio resampling (if needed)

# WebSocket for real-time dictation
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

[dev-dependencies]
tokio-test = "0.4"

