[package]
name = "workflow-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Workflow orchestration engine for RustCare Engine"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
events-bus = { path = "../events-bus" }
config-engine = { path = "../config-engine" }

# Workflow specific dependencies
tokio-cron-scheduler = "0.9"
petgraph = "0.6"
serde_with = "3.4"