[package]
name = "secrets-service"
version = "0.1.0"
edition = "2021"
description = "Multi-provider secrets management service for RustCare"

[dependencies]
# Core
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# Secrets Providers
vaultrs = "0.7"  # HashiCorp Vault
aws-sdk-secretsmanager = "1.0"
aws-config = "1.0"
azure_security_keyvault = "0.18"
azure_identity = "0.18"
google-secretmanager1 = "5.0"
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# HTTP/REST
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
hyper = { workspace = true, features = ["full"] }

# Encryption
aes-gcm = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# Caching
moka = { version = "0.12", features = ["future"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Configuration
config = { workspace = true }
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
